--- a/src/web/templates/modern.html
+++ b/src/web/templates/modern.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{TITLE}}</title>
     <style>{{CSS_MODERN}}</style>
-    <link rel="stylesheet" href="/src/web/css/modern.css">
-    <script src="/src/web/js/portal.js"></script>
+    <!-- <link rel="stylesheet" href="/src/web/css/modern.css"> -->
+    <!-- <script src="/src/web/js/portal.js"></script> -->
 </head>
 <body>
     <div class="container">
